加入备案，启用ai123.ai

--- a/templates/aibase.html
+++ b/templates/aibase.html
@@ -3,8 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-
-    <title>Blog Template for Bootstrap</title>
+    <meta name="baidu-site-verification" content="mku5N0Bskt" />
+    <meta name ="keywords" content="智能123,ai123,AI,ai"/＞
+    <title></title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
@@ -967,20 +968,19 @@
                 <div class="clear"></div>
             </ul>
 
-            <!-- <section class="c-copyright">
+            <section class="c-copyright">
                 <section class="disIb">
                     <span>Copyright ©</span>
-                    <a href="javascript:void(0)"><span>虎嗅网</span></a>
-                    <span>北京虎嗅信息科技股份有限公司</span>
-                    <a href="javascript:void(0)"><span>京ICP备12013432号-1</span></a>
+                    <a href="http://www.ai123.ai"><span>www.ai123.ai</span</a>
+                    <span>智能123</span>
+                    <a href="http://www.miitbeian.gov.cn"><span>豫ICP备17030832号</span></a>
                 </section>
-                <i class="fa fa-dot-circle-o ml10 mr10"></i>
-                <section class="disIb">
+               <!-- <section class="disIb">
                     <span>本站运行在</span>
                     <img src="{% static 'img/aliyun.png' %}">
                     <span>阿里云+</span>
-                </section>
-            </section> -->
+                </section>-->
+            </section>
         </div>
         <!-- <div class="c-right fl">
             <ul>
