首页隐藏不必要元素

--- a/templates/aibase.html
+++ b/templates/aibase.html
@@ -100,7 +100,7 @@
         <div class="clear"></div>
 
     </div>
-    <div class="nav-extend nav-extend-zixun undis" onmouseover="isOut=false" onmouseout="isOut=true">
+   <!--  <div class="nav-extend nav-extend-zixun undis" onmouseover="isOut=false" onmouseout="isOut=true">
         <div class="container">
             <ul>
                 <li>
@@ -162,7 +162,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 </header>
             
         
