--- a/templates/indexbase.html
+++ b/templates/indexbase.html
@@ -83,8 +83,8 @@
             <li><a href="#">站点</a></li>
         </ul>
     </li> -->
-    <li><a href="##">工具</a></li>
-    <li><a href="##">参考手册</a></li>
+    <!-- <li><a href="##">工具</a></li>
+    <li><a href="##">参考手册</a></li> -->
     <li><a href="/aisites">站点</a></li>
 </ul>
 	</div>
