--- a/templates/indexbase.html
+++ b/templates/indexbase.html
@@ -274,7 +274,7 @@
   <hr>
   <footer>
   	<div class="copyright">
-  		&copy;2017<a href="/">AI123</a> <a href="/">www.ai123.ai</a>
+  		&copy;2017<a href="/">AI123</a> 
   		<a href="http://www.miitbeian.gov.cn" target="_blank">豫ICP备17030832号-1	</a>
   	</div>
     <!-- <p class="pull-left">&copy; <a href="" target="_blank">AI123</a> 2017-12</p> -->
